src/scss/app.scss
@use './variables' as *;
@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);

* {
  scroll-behavior: smooth;
  scrollbar-width: thin;
  scrollbar-color: rgba(107, 107, 107, 0.512) rgba(0, 0, 0, 0.906);
  -webkit-tap-highlight-color: transparent;
}

*::-webkit-scrollbar {
  width: 12px;
}

*::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.906);
}

*::-webkit-scrollbar-thumb {
  background-color: rgba(107, 107, 107, 0.512);
  border-radius: 10px;
  border: 3px solid rgba(0, 0, 0, 0.906);
}
body {
  font-family: Montserrat, sans-serif;

  font-size: 18px;
  letter-spacing: 0.5px;
  line-height: 1.5;

  background: #181a1b;

  @media (max-width: 768px) {
    font-size: 16px;
  }
}

.pageFadeAnimation {
  &:before {
    content: '';
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: fixed;
    z-index: 9999;
    -webkit-animation: smoothLoading 1.5s;
    animation: smoothLoading 1.5s;
  }

  @-webkit-keyframes smoothLoading {
    from {
      background: #181a1b;
      opacity: 1;
    }

    to {
      background: #181a1b;
      opacity: 0;
    }
  }

  @keyframes smoothLoading {
    from {
      background: #181a1b;
      opacity: 1;
    }

    to {
      background: #181a1b;
      opacity: 0;
    }
  }
}

.container {
  max-width: 1170px;
  margin: 0 auto;
  padding: 0 10px;

  @media (max-width: 768px) {
    padding: 0 20px;
  }
  @media (max-width: 425px) {
    padding: 0 15px;
  }
}

.loadAnimation {
  -webkit-animation: load ease-in forwards;
  animation: load ease-in forwards;

  @each $name, $duration in $animation-durations {
    &.#{$name} {
      -webkit-animation-duration: $duration;
      animation-duration: $duration;
    }
  }
  @each $name, $delay in $animation-delay {
    &.#{$name} {
      -webkit-animation-delay: $delay;
      animation-delay: $delay;
    }
  }
}

@-webkit-keyframes load {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes load {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

